style/fsfeurope.css
/* ... */
a, a:link {
  /* 
   * To make links more visible, we use a slightly more blue-ish color,
   * instead of the default #202D79
   */
  color: #0066cc;
  text-decoration: none;
}

a:visited {
  color: #3394CE;
  text-decoration: none;
}

a:hover, a:active, a:focus {
  /*color: #6BB340;*/
  background-color: rgb(224,242,194);
  color: rgb(97,131,0);
  text-decoration: none;
}

/* Generally avoid borders around images */
img,
a img {
  border: 0;
}

img.right {
	float: right;
	margin: 0 0 1em 1em;
}

/* avoid hover effects and borders on internal marks and graphical links */
a[name], a[name]:hover, a.gl img, a.gl:link, a.gl:visited, a.gl:hover {
  border: none;
  background: #FDFDFD;
  text-decoration: none;
}

#wrapper {
  margin: 0;
  padding: 0 1em 0 1em;
}

/* invisible except in text based browsers */
.n {
  display: none;
}

/* attempts to resemble typographical block quotations */
/* FIXME: Use blockquote instead for real quotations */
blockquote,
.quote {
  font-size: 90%;
  font-style: italic;
  line-height: 115%;
	margin: 0 2em;
}

address {
  margin-left: 1em;
}

dl dt {
  font-weight: bold;
}

dl dd {
  margin-bottom: .5em;
}


/* ------------------------------------------------------------------------- */
/* Logo                                                                      */
/* ------------------------------------------------------------------------- */

#logo {
  margin: 1em 0;
}

#logo a,
#logo a img {
  margin: 0;
  padding: 0;
}

#logo a:hover {
	background: transparent;
}


/* ------------------------------------------------------------------------- */
/* Menu                                                                      */
/* ------------------------------------------------------------------------- */

#menu {
  /*float: left;*/
  margin: 0;
  padding: 0;
  position: absolute;
  width: 220px;
}

#menu ul {
	padding: 1em 0 1em 1.4em;
  /*background: url("/graphics/corner.png") top left no-repeat;*/
  margin: 0;
}

#menu ul ul {
  background: none;
  padding: 0 0 0 .6em;
}

#menu ul li {
  margin: 0.4em 0 0 0;
  list-style: none;
}

#menu ul ul li {
  margin: 0;
}

#menu a:hover img {
	background: transparent;
}




/* ------------------------------------------------------------------------- */
/* Localmenu                                                                 */
/* ------------------------------------------------------------------------- */

.localmenu p {
}

.local_menu_item {
   font-weight: bold;
}


/* ------------------------------------------------------------------------- */
/* Search box                                                                */
/* ------------------------------------------------------------------------- */

#menu #search {
  margin: 0;
  padding: 0;
}

#menu #search input[type=text] {
  padding-right: 2.2em;
  width: 160px;
}

#menu #search input[type=image] {
  border: 0;
  background-color: transparent;
  margin: -.3em 0 0 -2.3em;
}


/* ------------------------------------------------------------------------- */
/* Language List                                                             */
/* ------------------------------------------------------------------------- */

#language {
	margin: 0 0 0 240px;
	/*float: right;
	margin: 0;
	width: 79.5%;*/
  font-size: 90%;
  min-height: 2.2em;
  padding: .3em .5em;
}

#language ul {
  margin: 0;
  padding: 0;
}

#language ul li {
  display: inline;
  margin: 0 0.5em 0 0;
  list-style: none;
}

#language p {                           /* used for outdated/missing note */
  margin: 1em 0 0 0;
  border: 1px #ccc solid;
  padding: 0.3em;
  background-color: #f4f8fa;
}


/* ------------------------------------------------------------------------- */
/* Fundraising box                                                           */
/* ------------------------------------------------------------------------- */

#fundraising {
  margin: 1em 0 0 220px;
  padding: 0 0 0 1em;
}

#fundraising div.box {
  border: 1px solid #dbb65e;
  padding: 0.6em 1em 0.6em 1em;
  background-color: #ffecbf; 
}

#fundraising p.call1 {
  margin: 0 0 .5em 0;
  text-align: center;
  font-size: 150%;
  font-weight: bold;
}

#fundraising p.call2 {
  margin: .3em 0 .5em 0;
  text-align: center;
}

#fundraising div.percentbox {
  margin: 1em 0 .5em 0;
  border: 1px solid #202d79;
  background-color: #4ad2f0;
}

#fundraising div.percentbar {
  height: 1em;
  background-color: #3394ce;
}

#fundraising p.current {
  float: left;
  margin: 0;
  text-align: left;
}

#fundraising p.target {
  margin: 0;
  text-align: right;
}


/* banner */
#banner {
	text-align: center;
	padding: 0 .5em 2em .5em;
margin-top: -1.3em;
margin-bottom: 1.3em;
}

#banner img {
	max-width: 100%;
}


/* ------------------------------------------------------------------------- */
/* Content                                                                   */
/* ------------------------------------------------------------------------- */

#content {
  margin: 3em 0 0 240px;
	/*float: right;*/
	/*margin: 3em 0 0 0;*/
	padding: 0 .5em .5em;
	/*width: 79%;*/
}

#content h1,
#content h2,
#content h3 {
  color: #202D79;
  line-height: 100%;
}

#content h1 {
	border-bottom: 1px solid rgb(210,210,210);
	font-size: 250%;
	margin: 0 -.2em;
	padding: 0 0 .5em .2em;
}

#content .centre {
	text-align: center;
}

#content h1.centre {
	border: 0;
	margin: 0;
	padding: 0;
}

#content h2 {
  margin-top: 2em;
}

#content h3 {
	font-size: 130%;
  margin-top: 1.5em
}

#content p#category {
	font-size: 140%;
	font-weight: bold;
	line-height: 200%;
	margin: 0;
}

#content .image {
	background-color: #FDFDFD;
	float: left;
	padding: 0 2em 2em 0;
}

#content .image.right {
	float: right;
	padding: 0 0 2em 2em;
}

#content .image p {
	border-bottom: 1px solid rgb(210,210,210);
	border-left: 1px solid rgb(210,210,210);
	border-right: 1px solid rgb(210,210,210);
	font-size: 90%;
	margin-top: 0;
	padding: .5em;
}
/* ... */

